--- a/styles.css
+++ b/styles.css
@@ -111,5 +111,6 @@ img{border-radius: 5px;}
     .hidden {display:none}
     .letra-chica { font-size: 20px;}
     .foot {text-align: center;}
+    .galeria img{width: 85%; height: auto;}
 }
 
